--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,13 @@
     "express"
   ],
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.2.7",
+    "node-html-parser": "^1.1.14"
   }
 }
