--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,13 +13,14 @@ services:
             - mongodb
         restart: always
     mongodb:
-        image: mongo:latest
+        build: ./data
         container_name: "mongodb"
         environment:
-          - MONGO_DATA_DIR=/data/db
-          - MONGO_LOG_DIR=/dev/null
+            - PUID=1000
+            - PGID=1000
         volumes:
           - ./data/db:/data/db
         ports:
             - 27017:27017
         command: mongod --logpath=/dev/null # --quiet
+        restart: unless-stopped
