--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CourseProject-Front"]
-	path = CourseProject-Front
+	path = front
 	url = https://github.com/Aleksandr-Merkulov/CourseProject-Front.git
